kubernetes/apps/observability/grafana/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-canonical
  annotations:
    gatus.home-operations.com/endpoint: |
      name: grafana
      group: observability
spec:
  hostnames:
    - grafana.jptr.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https-canon
  rules:
    - backendRefs:
        - name: grafana
          port: 80
